--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
             Investment involves risk. Past performance is not indicative of future results.</p>
         </div>
     </footer>
+    <!-- Back to Top Button -->
+    <button id="backToTopBtn" aria-label="Scroll to top" title="Back to top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
 
+    <script src="app.js"></script>
+</body>
     <script src="app.js"></script>
 </body>
 </html>
