--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
                 <p>Avg Annual Return</p>
             </div>
             <div class="stat">
-                <h3>5,000+</h3>
-                <p>Clients Served</p>
-            </div>
-            <div class="stat">
-                <h3>99%</h3>
-                <p>Client Satisfaction</p>
-            </div>
-        </div>
+                <!-- Contact Section -->
+<section id="contact" class="section">
+    <h2>Start Your Investment Journey</h2>
+    <p>Contact us for a free consultation</p>
+    <form class="contact-form">
+        <input type="email" placeholder="Your Email" required>
+        <button type="submit" class="btn-primary">Get Started</button>
+    </form>
+</section>
     </section>
 
     <!-- Contact Section -->
